# ardupilot

ArduCopter/: AP_ExternalControl_Copter.cpp  AP_ExternalControl_Copter.h  Copter.cpp
Tools/ros2/differential_flatness/: package.xml  setup.py
Tools/ros2/differential_flatness/differential_flatness/: config.py  df_plotting.py  differential_flatness.py  trajectory.py  waypoints.py
libraries/AC_AttitudeControl/: AC_AttitudeControl.cpp  AC_AttitudeControl.h
libraries/AC_CustomControl/: AC_CustomControl.cpp  AC_CustomControl_INDI.cpp  AC_CustomControl_INDI.h
libraries/AP_DDS/: AP_DDS_Client.cpp  dds_xrce_profile.xml
libraries/AP_DDS/Idl/sensor_msgs/msg/: Imu.idl
