<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>differential_flatness</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="41.astiksrivastava@gmail.com">astik</maintainer>
  <license>Apache-2.0</license>

  <!-- Dependencies for ROS 2 and your custom messages -->
  <depend>rclpy</depend> <!-- ROS 2 Client Library for Python -->
  <depend>sensor_msgs</depend> <!-- Standard sensor message definitions -->
  <depend>ardupilot_msgs</depend> <!-- Your custom message definitions -->
  <depend>geometry_msgs</depend> <!-- Standard geometry message definitions -->

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
